<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sk.pixwell.therun.presentation.Dashboard.fragments.CheckIn.CheckInViewPager.ui.VerifiedFragment">


    <ScrollView
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <LinearLayout
            android:id="@+id/verified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/tafetov_hobby_beh"
                android:textAlignment="center"
                android:textColor="@color/selected_text_color"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/d_ka_trate"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/selected_text_color" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=" 513 km"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/selected_text_color"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/pocet_bezeckych_etap"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/selected_text_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=" 48"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/selected_text_color"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/termin_podujatia"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/selected_text_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/datum"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/selected_text_color"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/pocet_dni"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="61sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/do_zaciatku_preteku"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/selected_text_color" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/start"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/selected_text_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/miesto_startu"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/selected_text_color" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/termin_startu"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/selected_text_color" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/medzizastavka"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/selected_text_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/teplicka"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/selected_text_color" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/termin_medzizastavky"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/selected_text_color" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/ciel"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/selected_text_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mesto_cielu"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/selected_text_color" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/datum_cielu"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/selected_text_color" />

        </LinearLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/checkInLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="00:07:24"
            android:textColor="@color/colorPrimary"
            android:textSize="61sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="DO ZAČIATKU PRETEKU"
            android:textColor="@color/selected_text_color" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView19"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView20">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/oval_button_active"
                android:fontFamily="sans-serif"
                android:text="ŠTART"
                android:textSize="29sp" />

            <Button
                android:id="@+id/checkInButton"
                android:layout_width="296dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:layout_marginBottom="62dp"
                android:background="@drawable/capsule_button"
                android:fontFamily="sans-serif"
                android:text="CHECK IN"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView22"
            android:layout_centerHorizontal="true"
            android:text="KLIKNUTÍM NA TLAČIDLO POTVRĎTE"
            android:textColor="@color/selected_text_color" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="SVOJU PRÍTOMNOSŤ NA PRETEKU"
            android:textColor="@color/selected_text_color" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/endRun"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:text="tlačidlo"
            android:textColor="@color/selected_text_color"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="Pre ukončenie preteku stlačte "
            android:textColor="@color/selected_text_color"
            android:textSize="24sp" />

        <Button
            android:id="@+id/endButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/oval_button_active"
            android:fontFamily="sans-serif"
            android:text="Ukončiť pretek"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>
</RelativeLayout>
