<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sk.pixwell.therun.presentation.Dashboard.fragments.CheckIn.CheckInViewPager.ui.VerifiedFragment">


    <LinearLayout
        android:id="@+id/verified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/tafetov_hobby_beh"
            android:textAlignment="center"
            android:textColor="@color/selected_text_color"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/d_ka_trate"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/selected_text_color" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=" 534 km"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/selected_text_color"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pocet_bezeckych_etap"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/selected_text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=" 48"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/selected_text_color"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/termin_podujatia"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/selected_text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/datum"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/selected_text_color"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/do_zaciatku_preteku"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/selected_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/pocet_dni"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="FULL (534 km)"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/selected_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Košice - Bratislava (48 etáp)"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/selected_text_color" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Termín: piatok 1.6.2018"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/selected_text_color" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="EAST (291 km)"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/selected_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Košice - Teplička nad Váhom (28 etáp)"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/selected_text_color" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Termín: piatok 1.6.2018"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/selected_text_color" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="WEST (243 km)"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/selected_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Teplička nad Váhom - Bratislava (20 etáp)"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/selected_text_color" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="Termín: sobota 2.6.2018"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/selected_text_color" />

    </LinearLayout>
</ScrollView>
